@@ -111,7 +111,7 @@ shown in the following code:
    $pipeline = [
        ['<stage>' => <parameters>],
        ['<stage>' => <parameters>],
-       ...
+       // ...
    ];
    
    $cursor = $collection->aggregate($pipeline);
@@ -196,7 +196,7 @@ Aggregation Builder
 To create an aggregation pipeline by using the Aggregation Builder,
 perform the following actions:
 
-1. Create an array to store the pipeline stages.
+1. Create a ``MongoDB\Builder\Pipeline`` instance to store the pipeline stages.
 
 #. For each stage, call the a factory method from the
    ``Stage`` that shares the same name as your desired aggregation
@@ -212,15 +212,15 @@ aggregation pipelines:
 
 .. code-block:: php
 
-   $pipeline = [
+   $pipeline = new Pipeline(
        Stage::<factory method>(
            <stage specification>
        ),
        Stage::<factory method>(
            <stage specification>
        ),
-       ...
-   ];
+       // ...
+   );
    
    $cursor = $collection->aggregate($pipeline);
 
