@@ -65,7 +65,7 @@ Search queries by using the Aggregation Builder:
 To create a ``$search`` stage in your aggregation pipeline, perform the
 following actions:
 
-1. Create an array to store the pipeline stages.
+1. Create a ``Pipeline`` instance to store the pipeline stages.
 
 #. Call the ``Stage::search()`` method to create the Atlas Search stage.
 
@@ -77,12 +77,12 @@ queries:
 
 .. code-block:: php
 
-   $pipeline = [
+   $pipeline = new Pipeline(
        Stage::search(
            /* Atlas Search query specifications
            Search::compound(...) */
        ),
-   ];
+   );
 
 Atlas Search Query Examples
 ---------------------------
