@@ -66,7 +66,7 @@ Search queries by using the Aggregation Builder:
 To create a ``$vectorSearch`` stage in your aggregation pipeline, perform the
 following actions:
 
-1. Create an array to store the pipeline stages.
+1. Create a ``Pipeline`` instance to store the pipeline stages.
 
 #. Call the ``Stage::vectorSearch()`` method to create the Atlas Vector
    Search stage.
@@ -79,13 +79,13 @@ queries:
 
 .. code-block:: php
 
-   $pipeline = [
+   $pipeline = new Pipeline(
        Stage::vectorSearch(
            /* Atlas Vector Search query specifications
            index: '<index name>',
            path: '<path to embeddings>', ...*/
        ),
-   ];
+   );
 
 You must pass the following parameters to the ``vectorSearch()`` method:
 
