@@ -24,16 +24,17 @@ Definition
    .. code-block:: php
 
       function aggregate(
-          array $pipeline,
+          array|Pipeline $pipeline,
           array $options = []
       ): Traversable
 
 Parameters
 ----------
 
-``$pipeline`` : array
+``$pipeline`` : array|Pipeline
   Specifies an :manual:`aggregation pipeline </core/aggregation-pipeline>`
-  operation.
+  operation. You can include aggregation stages in a
+  ``MongoDB\Builder\Pipeline`` instance or in an array.
 
 ``$options`` : array
   An array specifying the desired options.
@@ -169,6 +170,7 @@ running command operations.
 See Also
 --------
 
+- :ref:`php-aggregation`
 - :phpmethod:`MongoDB\Collection::aggregate()`
 - :manual:`aggregate </reference/command/aggregate>` command reference in the
   MongoDB manual
